<?xml version="1.0" encoding="utf-8"?>

<!--  res/main_overview: Menu for FOverview.
    Copyright (C) 2015 Marco Satti
    Contact: marcosatti@gmail.com

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>. -->

<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
	<item android:id="@+id/action_refresh" android:title="@string/action_refresh" android:orderInCategory="1" android:showAsAction="collapseActionView" />
	<item android:id="@+id/option_displayallclasses" android:title="@string/option_displayallclasses" android:orderInCategory="6" android:showAsAction="collapseActionView" android:checkable="true" />
    <item android:id="@+id/action_help" android:orderInCategory="99" android:showAsAction="collapseActionView" android:title="@string/action_help" />
    <item android:id="@+id/action_settings" android:orderInCategory="100" android:showAsAction="collapseActionView" android:title="@string/action_settings" />
</menu>
