<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/main_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" > 

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="10dp"
	        android:text="@string/title_day"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <Spinner
	        android:id="@+id/today"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="10dp"
	        android:text="@string/title_week"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <Button
	        android:id="@+id/week"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/null_"
	        android:minHeight="35dp"
	        android:minWidth="50dp"
	        android:gravity="center"
            style="?android:attr/spinnerStyle" />
	    
    </LinearLayout>

    <include layout="@layout/empty_classes_list" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/main_classeslist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>